--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -11,7 +11,8 @@
 		<meta name="HandheldFriendly" content="true" />
 		<meta charset="utf-8">
 		<meta name="viewport min-width=768px" content="min-width=768, initial-scale=1.0" />
-		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+		<!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script> -->
+		<script src="src/assets/api-maps.yandex.ru.js" type="text/javascript"></script>
 		<!--[if lt IE 9]>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
 	<![endif]-->
