--- a/pages/cart-success.html
+++ b/pages/cart-success.html
@@ -23,7 +23,7 @@
 		<header class="dop-header header">
 			<div class="container">
 				<div class="header__row header__desctop row">
-					<a href="#" class="col-auto header__logo">
+					<a href="." class="col-auto header__logo">
 				<img src="img/logo-pegas-head.svg" />
 			</a>
 					<div class="header__lists-block col">
@@ -78,12 +78,12 @@
 						</ul>
 						<ul class="header__list header__list--bottom justify-content-between">
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="catalog.html" class="header__item-link">
 							каталог
 						</a>
 							</li>
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="https://kinesioblag.ru/" class="header__item-link" target="_blank">
 							кинезиоцентр
 						</a>
 							</li>
@@ -94,21 +94,21 @@
 								</svg>
 								<ul class="header__item-list">
 									<li class="header__item-item active">
-										<a href="#">О нас</a>
+										<a href="about.html">О нас</a>
 									</li>
 									<li class="header__item-item">
-										<a href="#">правила магазина</a>
+										<a href="rules.html">правила магазина</a>
 									</li>
 								</ul>
 							</li>
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="contacts.html" class="header__item-link">
 							контакты
 						</a>
 							</li>
 							<li class="header__item">
 								<div class="header__item-flex">
-									<a href="#" class="header__item-basket-block">
+									<a href="cart.html" class="header__item-basket-block">
 								<svg width="31" height="30" viewBox="0 0 31 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_860_1438)">
 <path d="M9.66763 19.3948H9.66901C9.67015 19.3948 9.6713 19.3945 9.67244 19.3945H25.6074C25.9997 19.3945 26.3447 19.1343 26.4525 18.7571L29.9681 6.45241C30.0438 6.18713 29.9907 5.90195 29.8248 5.68176C29.6586 5.46158 29.3989 5.33203 29.123 5.33203H7.64066L7.01238 2.50465C6.92288 2.10251 6.56628 1.81641 6.1543 1.81641H0.880859C0.395401 1.81641 0.00195312 2.20985 0.00195312 2.69531C0.00195312 3.18077 0.395401 3.57422 0.880859 3.57422H5.44934C5.56058 4.07524 8.45593 17.1046 8.62256 17.8542C7.68849 18.2602 7.0332 19.1915 7.0332 20.2734C7.0332 21.7273 8.21607 22.9102 9.66992 22.9102H25.6074C26.0929 22.9102 26.4863 22.5167 26.4863 22.0312C26.4863 21.5458 26.0929 21.1523 25.6074 21.1523H9.66992C9.18538 21.1523 8.79102 20.758 8.79102 20.2734C8.79102 19.7896 9.18401 19.3959 9.66763 19.3948ZM27.9578 7.08984L24.9444 17.6367H10.3749L8.03113 7.08984H27.9578Z" fill="white"/>
@@ -123,7 +123,7 @@
 </svg>
 								<div class="header__item-basket-counter">1</div>
 							</a>
-									<a href="#" class="header__item-basket-block">
+									<a href="favorits.html" class="header__item-basket-block">
 								<svg width="31" height="28" viewBox="0 0 31 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M15.248 27.3309C14.8209 27.3309 14.4092 27.1762 14.0883 26.8952C12.8763 25.8354 11.7079 24.8396 10.677 23.9611L10.6718 23.9565C7.64938 21.3809 5.03945 19.1567 3.22351 16.9656C1.19356 14.5161 0.248047 12.1936 0.248047 9.65649C0.248047 7.19144 1.09331 4.91727 2.62796 3.25262C4.18092 1.56828 6.3118 0.640625 8.62877 0.640625C10.3605 0.640625 11.9464 1.18811 13.3424 2.26774C14.0468 2.81271 14.6854 3.47967 15.248 4.25764C15.8108 3.47967 16.4492 2.81271 17.1539 2.26774C18.5499 1.18811 20.1358 0.640625 21.8675 0.640625C24.1842 0.640625 26.3153 1.56828 27.8683 3.25262C29.403 4.91727 30.248 7.19144 30.248 9.65649C30.248 12.1936 29.3027 14.5161 27.2728 16.9654C25.4568 19.1567 22.8471 21.3807 19.8252 23.9561C18.7925 24.8359 17.6222 25.8334 16.4075 26.8956C16.0869 27.1762 15.6749 27.3309 15.248 27.3309ZM8.62877 2.39798C6.80847 2.39798 5.13627 3.12445 3.91976 4.44372C2.68518 5.7829 2.00517 7.6341 2.00517 9.65649C2.00517 11.7904 2.79824 13.6988 4.57642 15.8443C6.29509 17.9182 8.85147 20.0967 11.8114 22.6192L11.8169 22.6238C12.8516 23.5056 14.0246 24.5054 15.2455 25.5729C16.4737 24.5033 17.6485 23.502 18.6854 22.6187C21.645 20.0962 24.2012 17.9182 25.9198 15.8443C27.6978 13.6988 28.4909 11.7904 28.4909 9.65649C28.4909 7.6341 27.8109 5.7829 26.5763 4.44372C25.36 3.12445 23.6876 2.39798 21.8675 2.39798C20.534 2.39798 19.3097 2.82186 18.2287 3.65774C17.2654 4.40298 16.5943 5.34505 16.2009 6.00423C15.9985 6.3432 15.6424 6.54554 15.248 6.54554C14.8537 6.54554 14.4975 6.3432 14.2952 6.00423C13.902 5.34505 13.2309 4.40298 12.2673 3.65774C11.1863 2.82186 9.962 2.39798 8.62877 2.39798Z" fill="white"/>
 </svg>
@@ -140,10 +140,10 @@
 					<div class="header__mobile-menu">
 						<ul class="header__mobile-menu-list">
 							<li class="header__mobile-menu-item">
-								<a href="#" class="active">КАТАЛОГ</a>
+								<a href="catalog.html" class="active">КАТАЛОГ</a>
 							</li>
 							<li class="header__mobile-menu-item">
-								<a href="#">Кинезиоцентр</a>
+								<a href="https://kinesioblag.ru/" target="_blank">Кинезиоцентр</a>
 							</li>
 							<li class="header__mobile-menu-item" onclick="pegas.header.showDopItems(this)">
 								<a href="javascript:void(0)">О компании</a>
@@ -154,15 +154,15 @@
 							<li class="header__mobile-shower">
 								<ul class="header__mobile-shower-list">
 									<li class="header__mobile-shower-item">
-										<a href="#">О нас</a>
+										<a href="about.html">О нас</a>
 									</li>
 									<li class="header__mobile-shower-item">
-										<a href="#">правила магазина</a>
+										<a href="rules.html">правила магазина</a>
 									</li>
 								</ul>
 							</li>
 							<li class="header__mobile-menu-item">
-								<a href="#">КОНТАКТЫ</a>
+								<a href="contacts.html">КОНТАКТЫ</a>
 							</li>
 						</ul>
 					</div>
@@ -236,12 +236,12 @@
 						</ul>
 						<ul class="header__list">
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="catalog.html" class="header__item-link">
 							каталог
 						</a>
 							</li>
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="https://kinesioblag.ru/" class="header__item-link" target="_blank">
 							кинезиоцентр
 						</a>
 							</li>
@@ -252,15 +252,15 @@
 								</svg>
 								<ul class="header__item-list">
 									<li class="header__item-item">
-										<a href="#">О нас</a>
+										<a href="about.html">О нас</a>
 									</li>
 									<li class="header__item-item">
-										<a href="#">правила магазина</a>
+										<a href="rules.html">правила магазина</a>
 									</li>
 								</ul>
 							</li>
 							<li class="header__item">
-								<a href="#" class="header__item-link">
+								<a href="contacts.html" class="header__item-link">
 							контакты
 						</a>
 							</li>
@@ -594,19 +594,19 @@
 							<div class="footer__row-links-block-title">основное меню</div>
 							<ul class="footer__row-links-list row">
 								<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-									<a href="$"">каталог</a>
+									<a href="catalog.html"">каталог</a>
 							</li>
 							<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-								<a href="$">о компании</a>
+								<a href="about.html">о компании</a>
 								</li>
 								<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-									<a href="$">контакты</a>
+									<a href="contacts.html">контакты</a>
 								</li>
 								<li class="footer__row-links-item col-xl-3 col-lg-3 col-md-6">
-									<a href="$">кинезиоцентр</a>
+									<a href="https://kinesioblag.ru/" target="_blank">кинезиоцентр</a>
 								</li>
 							</ul>
-							<a href="#" class="footer__row-links-privaci">Политика конфиденциальности</a>
+							<a href="privacy.html" class="footer__row-links-privaci">Политика конфиденциальности</a>
 						</div>
 					</div>
 					<div class="footer__row-finder col-xl-4 col-lg-5 col-md-5">
