catalog html update

--- a/pages/catalog-banner.html
+++ b/pages/catalog-banner.html
@@ -457,7 +457,7 @@
 			</div>
 		</footer>
 		<div class="g-popup _overlay"></div>
-		<script type="text/javascript" src="./main.min.js" defer="" async=""></script>
+		<script type="text/javascript" src="./main.min.js?2" defer="" async=""></script>
 	</body>
 
 	</html>
