--- a/pages/about.html
+++ b/pages/about.html
@@ -573,7 +573,7 @@
 			</div>
 		</footer>
 		<div class="g-popup _overlay"></div>
-		<script type="text/javascript" src="./main.min.js" defer="" async=""></script>
+		<script type="text/javascript" src="./main.min.js?2" defer="" async=""></script>
 	</body>
 
 	</html>
