--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -756,7 +756,7 @@
 			</div>
 		</footer>
 		<div class="g-popup _overlay"></div>
-		<script type="text/javascript" src="./main.min.js" defer="" async=""></script>
+		<script type="text/javascript" src="./main.min.js?2" defer="" async=""></script>
 	</body>
 
 	</html>
