--- a/pages/detail.html
+++ b/pages/detail.html
@@ -944,178 +944,182 @@
 				</div>
 			</div>
 			<div class="detail-information-popup" style="display:none">
-				<div class="detail-information-popup__content  _popup-content">
-					<div class="detail-information-popup__content-close" onclick="pegas.gPopup.close()">
-						<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<g clip-path="url(#clip0_894_5199)">
-								<path d="M0.77523 15C0.577643 15 0.380056 14.9249 0.229935 14.7736C-0.0714368 14.4723 -0.0714368 13.9837 0.229935 13.6823L13.6862 0.226029C13.9876 -0.075343 14.4762 -0.075343 14.7775 0.226029C15.0789 0.527401 15.0789 1.016 14.7775 1.31756L1.32147 14.7736C1.17022 14.9239 0.972629 15 0.77523 15Z" fill="#FB0606" />
-								<path d="M14.2324 15C14.0348 15 13.8374 14.9249 13.6871 14.7736L0.229935 1.31756C-0.0714368 1.016 -0.0714368 0.527401 0.229935 0.226029C0.531307 -0.075343 1.01991 -0.075343 1.32147 0.226029L14.7775 13.6823C15.0789 13.9837 15.0789 14.4723 14.7775 14.7736C14.6263 14.9239 14.4289 15 14.2324 15Z" fill="#FB0606" />
-							</g>
-							<defs>
-								<clipPath id="clip0_894_5199">
-									<rect width="15" height="15" fill="white" />
-								</clipPath>
-							</defs>
-						</svg>
-					</div>
-					<h2 class="detail-information-popup__title">КАК ПРАВИЛЬНО ПОДОБРАТЬ РАЗМЕР КОМПРЕССИОННОГО ТРИКОТАЖА</h2>
-					<div class="detail-information-popup__flex">
-						<ul class="detail-information-popup__list">
-							<li class="detail-information-popup__item">Размер изделия подбирается по индивидуальным меркамконечности. Верхний край лечебного трикотажа должен располагаться на 5-10 см выше уровня поражения вены</li>
-							<li class="detail-information-popup__item">При склонности к отекам необходимо производть измерения утром, сразу после пробуждения.</li>
-							<li class="detail-information-popup__item">
-								<a href="#">Самой главной меркой для подбора данного изделия является мерка b.</a>
-							</li>
-							<li class="detail-information-popup__item">
-								<span>g</span> - длина окружности бедра, на 5 см ниже промежности
-							</li>
-							<li class="detail-information-popup__item">
-								<span>d</span> - длина окружности голени ниже подколенной складки на ширину двух пальцеы
-							</li>
-							<li class="detail-information-popup__item">
-								<span>с</span> - длина окружности самой широкой голени
-							</li>
-							<li class="detail-information-popup__item">
-								<span>b</span> - длина окружности самой узкой части голени над лодыжками
-							</li>
-							<li class="detail-information-popup__item">
-								<span>AG</span> - длина от пятки до измерения g
-							</li>
-						</ul>
-						<img src="img/info-pop.png" alt="">
-					</div>
-					<div class="detail-information-popup__tables">
-						<div class="detail-information-popup__table" cellspacing="0" cellpadding="0">
-							<div class="detail-information-popup__tr">
-								<div class="detail-information-popup__td detail-information-popup__head">
-									<span>РАЗМЕР</span>
-									<span>МЕРКА</span>
-								</div>
-								<div class="detail-information-popup__td detail-information-popup__td--center">
-									S
-								</div>
-								<div class="detail-information-popup__td detail-information-popup__td--center">
-									M
-								</div>
-								<div class="detail-information-popup__td detail-information-popup__td--center">
-									L
-								</div>
-								<div class="detail-information-popup__td detail-information-popup__td--center">
-									XL
-								</div>
-								<div class="detail-information-popup__td detail-information-popup__td--center">
-									XXL
-								</div>
-							</div>
-							<div class="detail-information-popup__tr detail-information-popup__tr--first">
-								<div class="detail-information-popup__td detail-information-popup__td--first">
-									g, для чулок с резинкой на силиконовой основе
-								</div>
-								<div class="detail-information-popup__td-last">
-									47 - 54
-								</div>
-								<div class="detail-information-popup__td-last">
-									52 - 60
-								</div>
-								<div class="detail-information-popup__td-last">
-									56 - 65
-								</div>
-								<div class="detail-information-popup__td-last">
-									62 - 72
-								</div>
-								<div class="detail-information-popup__td-last">
-									65 - 76
-								</div>
-							</div>
-							<div class="detail-information-popup__tr">
-								<div class="detail-information-popup__td detail-information-popup__td--first">
-									g, для чулок с трикотажной резинкой
-								</div>
-								<div class="detail-information-popup__td-last">
-									42 - 57
-								</div>
-								<div class="detail-information-popup__td-last">
-									52 - 60
-								</div>
-								<div class="detail-information-popup__td-last">
-									48 - 64
-								</div>
-								<div class="detail-information-popup__td-last">
-									54 - 71
-								</div>
-								<div class="detail-information-popup__td-last">
-									60 - 78
-								</div>
-							</div>
-							<div class="detail-information-popup__tr detail-information-popup__tr--first">
-								<div class="detail-information-popup__td detail-information-popup__td--first">
-									d, см
-								</div>
-								<div class="detail-information-popup__td-last">
-									27 - 33
-								</div>
-								<div class="detail-information-popup__td-last">
-									31 - 37
-								</div>
-								<div class="detail-information-popup__td-last">
-									35 - 41
-								</div>
-								<div class="detail-information-popup__td-last">
-									39 - 45
-								</div>
-								<div class="detail-information-popup__td-last">
-									41 - 49
-								</div>
-							</div>
-							<div class="detail-information-popup__tr">
-								<div class="detail-information-popup__td detail-information-popup__td--first">
-									с, см
-								</div>
-								<div class="detail-information-popup__td-last">
-									28 - 34
-								</div>
-								<div class="detail-information-popup__td-last">
-									32 - 38
-								</div>
-								<div class="detail-information-popup__td-last">
-									36 - 42
-								</div>
-								<div class="detail-information-popup__td-last">
-									40 - 46
-								</div>
-								<div class="detail-information-popup__td-last">
-									42 - 50
-								</div>
-							</div>
-							<div class="detail-information-popup__tr detail-information-popup__tr--first">
-								<div class="detail-information-popup__td detail-information-popup__td--first">
-									d, см
-								</div>
-								<div class="detail-information-popup__td-last">
-									19 - 21
-								</div>
-								<div class="detail-information-popup__td-last">
-									22 - 24
-								</div>
-								<div class="detail-information-popup__td-last">
-									25 - 27
-								</div>
-								<div class="detail-information-popup__td-last">
-									28 - 30
-								</div>
-								<div class="detail-information-popup__td-last">
-									30 - 32
-								</div>
+				<div class="container">
+					<div class="detail-information-popup__content  _popup-content">
+						<div class="detail-information-popup__content-close" onclick="pegas.gPopup.close()">
+							<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g clip-path="url(#clip0_894_5199)">
+									<path d="M0.77523 15C0.577643 15 0.380056 14.9249 0.229935 14.7736C-0.0714368 14.4723 -0.0714368 13.9837 0.229935 13.6823L13.6862 0.226029C13.9876 -0.075343 14.4762 -0.075343 14.7775 0.226029C15.0789 0.527401 15.0789 1.016 14.7775 1.31756L1.32147 14.7736C1.17022 14.9239 0.972629 15 0.77523 15Z" fill="#FB0606" />
+									<path d="M14.2324 15C14.0348 15 13.8374 14.9249 13.6871 14.7736L0.229935 1.31756C-0.0714368 1.016 -0.0714368 0.527401 0.229935 0.226029C0.531307 -0.075343 1.01991 -0.075343 1.32147 0.226029L14.7775 13.6823C15.0789 13.9837 15.0789 14.4723 14.7775 14.7736C14.6263 14.9239 14.4289 15 14.2324 15Z" fill="#FB0606" />
+								</g>
+								<defs>
+									<clipPath id="clip0_894_5199">
+										<rect width="15" height="15" fill="white" />
+									</clipPath>
+								</defs>
+							</svg>
+						</div>
+						<h2 class="detail-information-popup__title">КАК ПРАВИЛЬНО ПОДОБРАТЬ РАЗМЕР КОМПРЕССИОННОГО ТРИКОТАЖА</h2>
+						<div class="detail-information-popup__flex row">
+							<ul class="detail-information-popup__list col-lg-7">
+								<li class="detail-information-popup__item">Размер изделия подбирается по индивидуальным меркамконечности. Верхний край лечебного трикотажа должен располагаться на 5-10 см выше уровня поражения вены</li>
+								<li class="detail-information-popup__item">При склонности к отекам необходимо производть измерения утром, сразу после пробуждения.</li>
+								<li class="detail-information-popup__item">
+									<a href="#">Самой главной меркой для подбора данного изделия является мерка b.</a>
+								</li>
+								<li class="detail-information-popup__item">
+									<span>g</span> - длина окружности бедра, на 5 см ниже промежности
+								</li>
+								<li class="detail-information-popup__item">
+									<span>d</span> - длина окружности голени ниже подколенной складки на ширину двух пальцеы
+								</li>
+								<li class="detail-information-popup__item">
+									<span>с</span> - длина окружности самой широкой голени
+								</li>
+								<li class="detail-information-popup__item">
+									<span>b</span> - длина окружности самой узкой части голени над лодыжками
+								</li>
+								<li class="detail-information-popup__item">
+									<span>AG</span> - длина от пятки до измерения g
+								</li>
+							</ul>
+							<div class="col-lg-5">
+								<img src="img/info-pop.png" alt="" class="img-fluid">
 							</div>
 						</div>
-						<div class="detail-information-popup__size">
-							<div class="detail-information-popup__size-top">
-								ДЛИНА, СМ
+						<div class="detail-information-popup__tables row">
+							<div class="detail-information-popup__table col-lg-8" cellspacing="0" cellpadding="0">
+								<div class="detail-information-popup__tr">
+									<div class="detail-information-popup__td detail-information-popup__head">
+										<span>РАЗМЕР</span>
+										<span>МЕРКА</span>
+									</div>
+									<div class="detail-information-popup__td detail-information-popup__td--center">
+										S
+									</div>
+									<div class="detail-information-popup__td detail-information-popup__td--center">
+										M
+									</div>
+									<div class="detail-information-popup__td detail-information-popup__td--center">
+										L
+									</div>
+									<div class="detail-information-popup__td detail-information-popup__td--center">
+										XL
+									</div>
+									<div class="detail-information-popup__td detail-information-popup__td--center">
+										XXL
+									</div>
+								</div>
+								<div class="detail-information-popup__tr detail-information-popup__tr--first">
+									<div class="detail-information-popup__td detail-information-popup__td--first">
+										g, для чулок с резинкой на силиконовой основе
+									</div>
+									<div class="detail-information-popup__td-last">
+										47 - 54
+									</div>
+									<div class="detail-information-popup__td-last">
+										52 - 60
+									</div>
+									<div class="detail-information-popup__td-last">
+										56 - 65
+									</div>
+									<div class="detail-information-popup__td-last">
+										62 - 72
+									</div>
+									<div class="detail-information-popup__td-last">
+										65 - 76
+									</div>
+								</div>
+								<div class="detail-information-popup__tr">
+									<div class="detail-information-popup__td detail-information-popup__td--first">
+										g, для чулок с трикотажной резинкой
+									</div>
+									<div class="detail-information-popup__td-last">
+										42 - 57
+									</div>
+									<div class="detail-information-popup__td-last">
+										52 - 60
+									</div>
+									<div class="detail-information-popup__td-last">
+										48 - 64
+									</div>
+									<div class="detail-information-popup__td-last">
+										54 - 71
+									</div>
+									<div class="detail-information-popup__td-last">
+										60 - 78
+									</div>
+								</div>
+								<div class="detail-information-popup__tr detail-information-popup__tr--first">
+									<div class="detail-information-popup__td detail-information-popup__td--first">
+										d, см
+									</div>
+									<div class="detail-information-popup__td-last">
+										27 - 33
+									</div>
+									<div class="detail-information-popup__td-last">
+										31 - 37
+									</div>
+									<div class="detail-information-popup__td-last">
+										35 - 41
+									</div>
+									<div class="detail-information-popup__td-last">
+										39 - 45
+									</div>
+									<div class="detail-information-popup__td-last">
+										41 - 49
+									</div>
+								</div>
+								<div class="detail-information-popup__tr">
+									<div class="detail-information-popup__td detail-information-popup__td--first">
+										с, см
+									</div>
+									<div class="detail-information-popup__td-last">
+										28 - 34
+									</div>
+									<div class="detail-information-popup__td-last">
+										32 - 38
+									</div>
+									<div class="detail-information-popup__td-last">
+										36 - 42
+									</div>
+									<div class="detail-information-popup__td-last">
+										40 - 46
+									</div>
+									<div class="detail-information-popup__td-last">
+										42 - 50
+									</div>
+								</div>
+								<div class="detail-information-popup__tr detail-information-popup__tr--first">
+									<div class="detail-information-popup__td detail-information-popup__td--first">
+										d, см
+									</div>
+									<div class="detail-information-popup__td-last">
+										19 - 21
+									</div>
+									<div class="detail-information-popup__td-last">
+										22 - 24
+									</div>
+									<div class="detail-information-popup__td-last">
+										25 - 27
+									</div>
+									<div class="detail-information-popup__td-last">
+										28 - 30
+									</div>
+									<div class="detail-information-popup__td-last">
+										30 - 32
+									</div>
+								</div>
 							</div>
-							<div class="detail-information-popup__size-bot">
-								<h2 class="detail-information-popup__size-name">AG ДЛЯ ЧУЛОК</h2>
-								<p>стандартная 72 - 83</p>
-								<p>малая 62 - 71</p>
+							<div class="detail-information-popup__size col-lg-4">
+								<div class="detail-information-popup__size-top">
+									ДЛИНА, СМ
+								</div>
+								<div class="detail-information-popup__size-bot">
+									<h2 class="detail-information-popup__size-name">AG ДЛЯ ЧУЛОК</h2>
+									<p>стандартная 72 - 83</p>
+									<p>малая 62 - 71</p>
+								</div>
 							</div>
 						</div>
 					</div>
