--- a/pages/about.html
+++ b/pages/about.html
@@ -455,13 +455,16 @@
 							<input type="text" placeholder="Ваш телефон" class="_phone-mask">
 							<div class="err_msg _error-msg">Error: invalid name</div>
 						</label>
-						<input type="submit" class="questions__btn col-xl-2 col-lg-3 col-lg-4" value="Отправить">
-						<label class="g-checkbox g-checkbox--label _field col-xl-2 col-lg-3 col-lg-4" data-call="checked">
+						<div class="col-xl-3 col-lg-4">
+							<input type="submit" class="questions__btn value=" Отправить">
+						</div>
+
+						<label class="g-checkbox g-checkbox--label _field col-xl-3 col-lg-4" data-call="checked">
 							<input type="checkbox" name="checkbox" class="g-checkbox__input">
 							<div class="g-checkbox__body">
 								<span class="g-checkbox__box"></span>
 								<div class="g-checkbox__text">
-									Согласие на обработку <a href="#">персональных данных</a>
+									Согласие на обработку <a href="privacy.html">персональных данных</a>
 								</div>
 							</div>
 						</label>
